--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,19 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.2.4",
+        "@react-three/drei": "^9.92.7",
+        "@react-three/fiber": "^8.15.12",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.559.0",
+        "maath": "^0.10.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^7.10.1",
-        "tailwind-merge": "^3.4.0"
+        "tailwind-merge": "^3.4.0",
+        "three": "^0.160.0",
+        "valtio": "^2.2.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
