--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.3",
+        "mongoose": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
