--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,11 @@
 {
-    "name": "fashion",
+    "name": "trendpilot-frontend",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
+    "description": "TrendPilot - Demand-first fashion creation platform with 3D visualization",
+    "author": "Nikhil S <nikhil18207@github>",
+    "license": "MIT",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
