--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,11 @@
 PORT=5000
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024
 JWT_EXPIRES_IN=7d
+
+# Database Configuration
+# Option 1: Use MongoDB Atlas or local MongoDB
 MONGODB_URI=mongodb://localhost:27017/emergent_hackathon
+
+# Option 2: Use in-memory storage (for hackathon demo - no MongoDB required)
+# Uncomment the line below to use mock authentication
+USE_MOCK_AUTH=true
